<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FullscreenActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp">
        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="#fff"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_name"
            android:textColor="#fff"
            android:textSize="16sp"
            android:layout_below="@id/welcome_text"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/help_image"
            android:src="@android:drawable/ic_menu_help"
            android:layout_alignParentRight="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textColor="#fff"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_below="@id/help_image"
            android:layout_alignParentRight="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_name"
            android:textColor="#fff"
            android:textSize="16sp"
            android:layout_below="@id/welcome_text"/>

        <GridLayout
            android:id="@+id/menu_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:columnCount="3"
            android:rowCount="2">

            <LinearLayout
                android:id="@+id/menu_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_column="0"
                android:layout_row="0">

                <TextView
                    android:id="@+id/menu_payment_fa"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="#ccc"
                    android:textSize="90sp"
                    android:text="@string/fa_map_marked_alt" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#ccc"
                    android:gravity="center"
                    android:textSize="8sp"
                    android:drawableTop="@string/fa_dollar_sign"
                    android:text="@string/payment"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/menu_stations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_column="1"
                android:layout_row="0">

                <TextView
                    android:id="@+id/menu_stations_fa"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="#ccc"
                    android:textSize="90sp"
                    android:text="@string/fa_map_marked_alt" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#ccc"
                    android:gravity="center"
                    android:textSize="8sp"
                    android:text="@string/stations"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_route"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_column="2"
                android:layout_row="0">

                <TextView
                    android:id="@+id/menu_route_fa"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="#ccc"
                    android:textSize="90sp"
                    android:text="@string/fa_map_marked_alt" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#ccc"
                    android:gravity="center"
                    android:textSize="8sp"
                    android:text="@string/route"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_column="0"
                android:layout_row="1">

                <TextView
                    android:id="@+id/menu_tag_fa"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:background="#ccc"
                    android:gravity="center"
                    android:textSize="90sp"
                    android:text="@string/fa_tag" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#ccc"
                    android:gravity="center"
                    android:textSize="8sp"
                    android:text="@string/benefits"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_column="1"
                android:layout_row="1">

                <TextView
                    android:id="@+id/menu_envelope_fa"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="#ccc"
                    android:textSize="90sp"
                    android:text="@string/fa_envelope" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="#ccc"
                    android:textSize="8sp"
                    android:text="@string/msg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_column="2"
                android:layout_row="1">

                <TextView
                    android:id="@+id/menu_conf_fa"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="#ccc"
                    android:textSize="90sp"
                    android:text="@string/fa_cog" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="#ccc"
                    android:textSize="8sp"
                    android:text="@string/config"/>

            </LinearLayout>
        </GridLayout>
    </RelativeLayout>
</FrameLayout>